grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.class_definition,
      $.struct_definition,
      $.enum_definition,
      $.const_definition,
      $.include_directive,
      $.version_directive,
      $.function_definition,
      alias($._global_declaration, $.declaration),
    ),

    // =========================================================================
    // Include and Version directives
    // =========================================================================

    class_definition: $ => prec(1, seq(
      optional($.class_modifier),
      keyword('class'),
      field('name', $._type_identifier),
      optional($.inheritance_specifier),
      optional($.class_flags),
      '{',
      repeat($._class_body_item),
      '}',
    )),

    inheritance_specifier: $ => seq(
      ':',
      field('parent', $._dottable_type_identifier),
    ),

    _class_body_item: $ => choice(
      $.method_definition,
      $.field_declaration,
      $.default_block,
      $.states_block,
      $.property_definition,
      $.flag_definition,
      $.const_definition,
      $.enum_definition,
      $.mixin_statement,
      $.static_const_array,
    ),

    // =========================================================================
    // Field declaration
    // =========================================================================

    states_block: $ => seq(
      keywordWithPrecedence('states', 1),
      optional($.states_options),
      '{',
      repeat($._states_body_item),
      '}',
    ),

    _states_body_item: $ => choice(
      $.state_label,
      $.state_flow,
      $.state_line,
    ),

    // A state label followed by its body (state lines and flow control)
    // The body is captured to enable proper indentation queries
    state_label: $ => prec.right(seq(
      field('name', $.state_label_name),
      ':',
      field('body', optional($.state_body)),
    )),

    // The body of a state label - contains state lines and optionally ends with flow control
    state_body: $ => prec.right(repeat1(choice(
      $.state_flow,
      $.state_line,
    ))),

    state_label_name: $ => seq(
      $._state_label_segment,
      repeat(seq('.', $._state_label_segment)),
    ),

    state_line: $ => prec.right(choice(
      seq(
        field('sprite_frames', $._state_sprite_frames),
        field('duration', $._state_duration),
        optional($.state_modifiers),
        field('action', $.compound_statement),
      ),
      seq(
        field('sprite_frames', $._state_sprite_frames),
        field('duration', $._state_duration),
        optional($.state_modifiers),
        optional($.state_action_call),
        ';',
      ),
    )),

    _state_sprite_frames: $ => choice(
      $.state_sprite_frames,
      $.quoted_state_sprite_frames,
      $.mixed_quoted_state_sprite_frames,
    ),

    // Combined state sprite + frames as a SINGLE token
    // This prevents ambiguity with 4-letter state labels like "SHRL:"
    // because the entire "TROO A" or "TNT1 ABCD" is matched as one token.
    // If followed by ':', it won't match this pattern and will fall through to identifier.
    //
    // Pattern breakdown:
    // - ("[^"\\r\\n]{4}"|"[A-Za-z0-9_]{4}"|####|[A-Za-z0-9_]{4}) - sprite part
    // - [ \t]+ - required whitespace
    // - ("[^"\\r\\n]+"|[A-Za-z0-9\[\]\\#]+) - frame characters
    state_sprite_frames: _ => token(prec(1, seq(
      choice(
        /####/,
        // Exclude the exact unquoted state-flow spellings so `Goto Ready;`
        // and similar lines parse as flow control instead of sprite/frame pairs.
        /[A-EH-KM-RT-VX-Za-eh-km-rt-vx-z0-9_][A-Za-z0-9_]{3}/,
        /[Gg][^Oo][A-Za-z0-9_]{2}/,
        /[Gg][Oo][^Tt][A-Za-z0-9_]/,
        /[Gg][Oo][Tt][^Oo]/,
        /[Ss][^Tt][A-Za-z0-9_]{2}/,
        /[Ss][Tt][^Oo][A-Za-z0-9_]/,
        /[Ss][Tt][Oo][^Pp]/,
        /[Ww][^Aa][A-Za-z0-9_]{2}/,
        /[Ww][Aa][^Ii][A-Za-z0-9_]/,
        /[Ww][Aa][Ii][^Tt]/,
        /[Ff][^Aa][A-Za-z0-9_]{2}/,
        /[Ff][Aa][^Ii][A-Za-z0-9_]/,
        /[Ff][Aa][Ii][^Ll]/,
        /[Ll][^Oo][A-Za-z0-9_]{2}/,
        /[Ll][Oo][^Oo][A-Za-z0-9_]/,
        /[Ll][Oo][Oo][^Pp]/,
      ),
      /[ \t]+/,
      /[A-Za-z0-9\[\]\\#]+/,
    ))),

    quoted_state_sprite_frames: $ => seq(
      $.string_literal,
      choice(
        $.string_literal,
        alias(token(/[A-Za-z0-9\[\]\\#]+/), $.state_frame_chars),
      ),
    ),

    mixed_quoted_state_sprite_frames: _ => token(prec(1, /[A-Za-z0-9_#]{4}[ \t]+"[^"\r\n]+"/)),

    _state_duration: $ => choice(
      $.number_literal,
      seq('-', $.number_literal),
      $.random_expression,
    ),

    state_modifiers: $ => repeat1($.state_modifier),

    state_modifier: $ => choice(
      keyword('bright'),
      keyword('fast'),
      keyword('slow'),
      keyword('ticadjust'),
      keyword('nodelay'),
      keyword('canraise'),
      seq(keyword('light'), '(', commaSep1($.string_literal), ')'),
      seq(keyword('offset'), '(', $.expression, ',', $.expression, ')'),
    ),

    state_action_call: $ => seq(
      field('function', $.identifier),
      optional(field('arguments', $.argument_list)),
    ),

    state_flow: $ => choice(
      seq(keyword('loop'), ';'),
      seq(keyword('stop'), ';'),
      seq(keyword('wait'), ';'),
      seq(keyword('fail'), ';'),
      $.goto_state_flow,
    ),

    goto_state_flow: $ => prec(3, seq(
      // Require trailing horizontal whitespace so labels like `GotoDeath:`
      // are not mis-tokenized as a `goto` flow statement.
      alias(token(prec(2, /[Gg][Oo][Tt][Oo][ \t]+/)), 'goto'),
      field('target', $.state_goto_target),
      alias(token(seq(/[ \t]*/, ';')), ';'),
    )),

    state_goto_target: $ => prec.right(seq(
      optional(seq(field('class', $.state_goto_qualifier), '::')),
      $.dottable_name,
      optional(seq('+', $.number_literal)),
    )),

    compound_statement: $ => seq(
      '{',
      repeat($._block_item),
      '}',
    ),

    _block_item: $ => choice(
      alias($._local_declaration, $.declaration),
      $.statement,
      $.static_const_array,
    ),

    expression_statement: $ => seq(
      optional($.expression),
      ';',
    ),

    binary_expression: $ => {
      const table = [
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['|', PREC.INCLUSIVE_OR],
        ['^', PREC.EXCLUSIVE_OR],
        ['&', PREC.BITWISE_AND],
        ['==', PREC.EQUAL],
        ['!=', PREC.EQUAL],
        ['~==', PREC.EQUAL], // Case-insensitive string comparison
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['<>=', PREC.RELATIONAL], // ZScript three-way comparison
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['>>>', PREC.SHIFT], // Unsigned right shift
        ['..', PREC.CONCAT], // String concatenation
        ['is', PREC.RELATIONAL], // Type check
        ['cross', PREC.MULTIPLY], // Vector cross product
        ['dot', PREC.MULTIPLY], // Vector dot product
        ['**', PREC.MULTIPLY], // Power
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $.expression),
        ));
      }));
    },

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $.expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      commaSep(choice(
        $.expression,
        $.named_argument,
      )),
      ')',
    ),

    random_expression: $ => prec(PREC.CALL, seq(
      field('function', choice(
        keyword('random'),
        keyword('frandom'),
        keyword('random2'),
        keyword('randompick'),
        keyword('frandompick'),
      )),
      optional(seq('[', field('id', $.identifier), ']')),
      '(',
      optional(commaSep1($.expression)),
      ')',
    )),

    number_literal: _ => {
      const separator = "'";
      const hex = /[0-9a-fA-F]/;
      const decimal = /[0-9]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const decimalDigits = seq(repeat1(decimal), repeat(seq(separator, repeat1(decimal))));
      return token(seq(
        optional(/[-+]/),
        choice(
          seq(
            choice(
              decimalDigits,
              seq(/0b/i, /[01]+/),
              seq(/0x/i, hexDigits),
            ),
            optional(seq('.', optional(hexDigits))),
          ),
          seq('.', decimalDigits),
        ),
        optional(seq(
          /[ep]/i,
          optional(/[-+]/),
          hexDigits,
        )),
        /[ulf]*/i,
      ));
    },

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    identifier: $ => choice(
      $._word_identifier,
      $._shadowable_identifier,
    ),

    _word_identifier: _ => NON_RESERVED_IDENTIFIER_PATTERN,

    _shadowable_identifier: $ => choice(
      ...SHADOWABLE_IDENTIFIER_WORDS.map(word => keywordIdentifier($, word)),
    ),

    _dottable_identifier: $ => choice(
      $.identifier,
      keywordIdentifier($, 'action'),
    ),

    _state_label_segment: $ => choice(
      $.identifier,
      ...STATE_LABEL_KEYWORD_WORDS.map(word => keywordIdentifier($, word)),
    ),

    dottable_name: $ => seq(
      $._dottable_identifier,
      repeat(seq('.', $._dottable_identifier)),
    ),

    _dottable_type_identifier: $ => alias($.dottable_name, $.type_identifier),

    _type_identifier: $ => alias($.identifier, $.type_identifier),
