test/corpus/states.txt
================================================================================
Simple states block
================================================================================

class Test : Actor {
    States {
        Spawn:
            TROO A 10;
            Loop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow))))))

================================================================================
States with multiple labels
================================================================================

class Test : Actor {
    States {
        Spawn:
            TROO A 10;
            Goto See;
        See:
            TROO AABBCC 4;
            Loop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow
            (goto_state_flow
              target: (state_goto_target
                (dottable_name
                  (identifier)))))))
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow))))))

================================================================================
State with BRIGHT modifier
================================================================================

class Test : Actor {
    States {
        Fire:
            PISG A 1 Bright;
            Stop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            (state_modifiers
              (state_modifier)))
          (state_flow))))))

================================================================================
State with function call
================================================================================

class Test : Actor {
    States {
        Missile:
            TROO EF 8 A_FaceTarget();
            TROO G 6 A_TroopAttack();
            Goto See;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            (state_action_call
              function: (identifier)
              arguments: (argument_list)))
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            (state_action_call
              function: (identifier)
              arguments: (argument_list)))
          (state_flow
            (goto_state_flow
              target: (state_goto_target
                (dottable_name
                  (identifier))))))))))

================================================================================
State with anonymous function
================================================================================

class Test : Actor {
    States {
        Spawn:
            TROO A 1 {
                A_Chase();
            }
            Loop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            action: (compound_statement
              (expression_statement
                (call_expression
                  function: (identifier)
                  arguments: (argument_list)))))
          (state_flow))))))

================================================================================
Dotted state label
================================================================================

class Test : Actor {
    States {
        Death.Fire:
            TROO H 5;
            Stop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier)
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow))))))

================================================================================
Goto with offset
================================================================================

class Test : Actor {
    States {
        Pain:
            TROO H 2;
            TROO H 2 A_Pain();
            Goto See + 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            (state_action_call
              function: (identifier)
              arguments: (argument_list)))
          (state_flow
            (goto_state_flow
              target: (state_goto_target
                (dottable_name
                  (identifier))
                (number_literal)))))))))

================================================================================
Uppercase goto in states block
================================================================================

class Test : Actor {
    States {
        ReloadLeftUnloadedContinued:
            4B22 PON 1;
            4B21 FGHI 1;
            GOTO ContinueLeftReload;
        ContinueLeftReload:
            TNT1 A 0;
            Stop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow
            (goto_state_flow
              target: (state_goto_target
                (dottable_name
                  (identifier)))))))
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow))))))

================================================================================
State with NoDelay
================================================================================

class Test : Actor {
    States {
        Spawn:
            TROO A 0 NoDelay;
            TROO A 10;
            Loop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            (state_modifiers
              (state_modifier)))
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow))))))

================================================================================
Four-letter uppercase state labels
================================================================================

class Test : Actor {
    States {
        SHRL:
            YRO1 A 1;
            Loop;
        SHRE:
            TNT1 A 0;
            Goto See;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow)))
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal))
          (state_flow
            (goto_state_flow
              target: (state_goto_target
                (dottable_name
                  (identifier))))))))))

================================================================================
Quoted sprite and frame state line
================================================================================

class Test : Actor {
    States {
        Spawn:
            "####" "#" 0 A_PbvpInterpolate();
            Loop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (quoted_state_sprite_frames
              (string_literal
                (string_content))
              (string_literal
                (string_content)))
            duration: (number_literal)
            (state_action_call
              function: (identifier)
              arguments: (argument_list)))
          (state_flow))))))

================================================================================
Quoted punctuation sprite with modifier and action call
================================================================================

class Test : Actor {
    States {
        Spawn:
            "----" A 0 NoDelay A_ScaleVelocity(frandom(0.8, 1.2));
            Stop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (quoted_state_sprite_frames
              (string_literal
                (string_content))
              (state_frame_chars))
            duration: (number_literal)
            (state_modifiers
              (state_modifier))
            (state_action_call
              function: (identifier)
              arguments: (argument_list
                (random_expression
                  (number_literal)
                  (number_literal)))))
          (state_flow))))))

================================================================================
Quoted punctuation sprite with modifier and anonymous block
================================================================================

class Test : Actor {
    States {
        Fly:
            "----" A 1 Bright {
                A_CustomMissile("YellowFlareSpawn", 0, 0, 0, 0);
            }
            Loop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (quoted_state_sprite_frames
              (string_literal
                (string_content))
              (state_frame_chars))
            duration: (number_literal)
            (state_modifiers
              (state_modifier))
            action: (compound_statement
              (expression_statement
                (call_expression
                  function: (identifier)
                  arguments: (argument_list
                    (string_literal
                      (string_content))
                    (number_literal)
                    (number_literal)
                    (number_literal)
                    (number_literal))))))
          (state_flow))))))

================================================================================
Unquoted sprite with quoted frame string
================================================================================

class Test : Actor {
    States {
        Fire:
            QSF1 "#" 1 Bright {
                A_GunFlash();
            }
            Stop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (mixed_quoted_state_sprite_frames)
            duration: (number_literal)
            (state_modifiers
              (state_modifier))
            action: (compound_statement
              (expression_statement
                (call_expression
                  function: (identifier)
                  arguments: (argument_list)))))
          (state_flow))))))

================================================================================
Lowercase sprite and frame state lines
================================================================================

class Test : Actor {
    States {
        Ready:
            TNT1 a 0 A_JumpIf(CountInv("Ammo") < 1, "Empty");
            tnt1 a 0 A_SpawnItem("Flare", 0, 0);
            Loop;
        Empty:
            Stop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            (state_action_call
              function: (identifier)
              arguments: (argument_list
                (binary_expression
                  left: (call_expression
                    function: (identifier)
                    arguments: (argument_list
                      (string_literal
                        (string_content))))
                  right: (number_literal))
                (string_literal
                  (string_content)))))
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            (state_action_call
              function: (identifier)
              arguments: (argument_list
                (string_literal
                  (string_content))
                (number_literal)
                (number_literal))))
          (state_flow)))
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_flow))))))

================================================================================
Goto with trailing whitespace and goto-prefixed labels
================================================================================

class Test : Actor {
    States {
        Pain:
            Goto See    ;
        GotoDeath:
            TNT1 A 0 A_Die;
            Stop;
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_definition
    name: (type_identifier)
    (inheritance_specifier
      parent: (type_identifier
        (identifier)))
    (states_block
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_flow
            (goto_state_flow
              target: (state_goto_target
                (dottable_name
                  (identifier)))))))
      (state_label
        name: (state_label_name
          (identifier))
        body: (state_body
          (state_line
            sprite_frames: (state_sprite_frames)
            duration: (number_literal)
            (state_action_call
              function: (identifier)))
          (state_flow))))))
